syntax = "proto3";
package tgvalidatord;

import "google/protobuf/timestamp.proto";

option java_package = "com.taurushq.sdk.protect.proto.v1";

message FeePayerEnvelope {
  uint64 id = 1;
  uint64 tenantId = 2;
  string blockchain = 3;
  string name = 4;
  FeePayer feePayer = 5;
  google.protobuf.Timestamp creationDate = 6;
  string network = 7;
}

message FeePayer {
  enum Blockchain {
    NoneBlockchain = 0;
    ETH = 1;
  }
  enum Kind {
    NoneKind = 0;
    Local = 1;
    Remote = 2;
  }
  enum ForwarderKind {
    GSNForwarderV2 = 0;
    OpenZeppelinForwarder = 1;
  }
  message _ETH {
    message Local {
      uint64 addressId = 1;
      uint64 forwarderAddressId = 2;
      bool autoApprove = 3;
      uint64 creatorAddressId = 4;
      ForwarderKind forwarderKind = 5;
      bytes domainSeparator = 6;
    }
    message Remote {
      string url = 1;
      string username = 2;
      string password = 3;
      string privateKey = 4;
      uint64 fromAddressId = 5;
      string forwarderAddress = 6;
      uint64 forwarderAddressId = 7;
      string creatorAddress = 8;
      uint64 creatorAddressId = 9;
      ForwarderKind forwarderKind = 10;
      bytes domainSeparator = 11;
    }
    string kind = 1;
    Local local = 2;
    Remote remote = 3; // Used when unpacking
    bytes remoteEncrypted = 4;
  }
  string blockchain = 1;
  _ETH eth = 2;
}
