syntax = "proto3";
package tgvalidatord;

option java_package = "com.taurushq.sdk.protect.proto.v1";

message ApproversGroup {
  string externalGroupID = 1 ;
  uint32 minimumSignatures = 2;
}

message ParallelApproversGroups {
  repeated ApproversGroup sequential = 1;
}

message Approvers {
  repeated ParallelApproversGroups parallel = 1;
}
