syntax = "proto3";
package tgvalidatord;

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option java_package = "com.taurushq.sdk.protect.proto.v1";

message Currency {
  string name = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Name of the currency."
    }
  ];
  string symbol = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Shorthand symbol for the currency."
    }
  ];
  uint64 coinTypeIndex = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Index used to identify the coin type in BIP44. (e.g. Bitcoin is 0, Ethereum is 60)."
    }
  ];
  string blockchain = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The Blockchain the currency is associated with, (e.g. ETH, BTC)."
    }
  ];
  bool isToken = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Indicates if the currency is a token (e.g., ERC-20)."
    }
  ];
  bool isERC20 = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Indicates if the token is an ERC-20 token."
    }
  ];
  google.protobuf.UInt64Value decimals = 7 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Number of decimal places the currency uses (e.g. 18 for ETH)."
    }
  ];
  string contractAddress = 8 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Smart contract address if currency is a smart contract (e.g. ERC-20.)."
    }
  ];
  bool hasStaking = 9 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Indicates if the currency supports staking."
    }
  ];
  bool isUTXOBased = 12 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Indicates if the currency is UTXO-based (e.g. Bitcoin)."
    }
  ];
  bool isAccountBased = 13 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Indicates if the currency is account-based (e.g. Ethereum)."
    }
  ];
  bool isFiat = 14 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Indicates if the currency is a fiat currency (e.g. CHF, EUR, USD)."
    }
  ];
  bool isFA12 = 15 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Indicates if the currency is based on FA12 standard (used in Tezos)."
    }
  ];
  bool isFA20 = 16 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Indicates if the currency is based on FA20 standard (used in Tezos)."
    }
  ];
  bool isNFT = 17 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Indicates if the currency represents a Non-Fungible Token (NFT)."
    }
  ];
  bool enabled = 18 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Indicates if the currency is enabled in the current tenant."
    }
  ];
  string id = 19 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Unique identifier of the currency."
    }
  ];
  string displayName = 20 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Display name for the currency, (e.g. Ethereum, Bitcoin)."
    }
  ];
  string type = 21 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Type of the currency. Can be `token`, `fiat`, `native` , or `signet`."
    }
  ];
  google.protobuf.UInt64Value wlcaId = 22 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "White listed contract address id associated with the currency."
    }
  ];
  string network = 23 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Network or environment the currency is used on (e.g. 'mainnet', 'testnet')."
    }
  ];
  string tokenID = 24 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Unique id for the token, if applicable (e.g. for NFTs)."
    }
  ];
  string logo = 25 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Currency logo in Data URI scheme. Base 64 encoded. (e.g. data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==)."
    }
  ];
}

message CurrencyFilter {
  string symbol = 1;
  string blockchain = 2;

  string id = 3;
}

message UniqueCurrencyFilter {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["blockchain", "network"]
    }
  };

  string blockchain = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Required: The Blockchain to filter by (e.g. ETH, BTC). Can be found using the blockchain endpoint `/api/rest/v1/blockchains`"
    }
  ];
  string network = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Required: Network or environment the currency is used on (e.g. 'mainnet', 'testnet')."
    }
  ];
  string tokenContractAddress = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "If this parameter is set, the currency returned will be a token with the specified contract address. If not set, the currency returned will be the native currency of the blockchain.";
    }
  ];
  string tokenID = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "For some blockchains (ex. ALGO, XTZ) a tokenContractAddress might contain multiple assets. The tokenID is used to differentiate between those assets. If not set, the currency returned won't have any tokenID defined.";
    }
  ];
}
